<resources>
    <string name="app_name">Minderheitenquartett</string>
    <string name="IT_Security_Edition">IT-Security Edition</string>
    <string name="tap_to_play">Tap to Play!</string>
    <string name="title_activity_rules">Rules</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="rules">Blabla</string>
    <string name="regeln">1. Karten werden von der App gemischt und zugeteilt 2. Die vorderste Karte zählt 3. Suchen Sie sich eine Kategorie der gezeigten Karte aus 4. Der Spieler mit dem höheren Wert gewinnt  5. Der Spieler der alle Karten gesammelt hat, hat das Spiel gewonnen</string>
    <string name="regeln2">Die Karten werden von der App gemischt und danach zugeteilt. Die jeweilige Karte auf dem Display wird gespielt. Suche eine Wunsch-Kategorie aus. Der Spieler mit dem höchsten Wert gewinnt die Runde. Du willst gewinnen? Dann überbiete und sammel alle Karten! Viel Spaß</string>
    <string name="start">Let\'s start!</string>
    <string name="start2">Start!</string>
    <string name="Quartett">Titel</string>
    <string name="minderheiten">Minderheitenquartett</string>
    <string name="subtitle">IT-Security Edition</string>
    <string name="nerd_subtitle"><![CDATA[</IT-Security Edition>]]></string>
    <string name="trump_intro">Make Quartett great again!</string>
    <string name="regeln3">Yes, du hast richtig gehört! Together we\'re making Quartett great again. Aber nicht irgendein Quarttet, nein. Minderheiten a la IT-Sicherheit! Deine Minderheiten werden wir automatisch ausgeteilt. Entscheide dich in deiner Trump, ähh, Top-Karte... für den besten Wert. Um zu gewinnen brauchst du alle Karten deines Gegners. Geb alles... sonst heißt es \"you\'re fired!\"</string>
    <string name="trump_rules">Yes, Du hast richtig gehört! Together we are making Quartett great again. Aber nicht irgendein Quartett. Nein! Minderheiten a la IT-Sicherheit. Deine Minderheiten-Karten werden Dir automatisch zugeteilt. Entscheide Dich in Deiner Trump, ähh, Top-Karte... für den besten Wert. Um zu gewinnen brauchst Du alle Karten deines Gegners. Streng Dich an! Sonst heißt es schneller als du denkst \"you are fired\"!</string>
    <string name="ende">Great Game!  Very great Game!</string>
    <string name="ende1">Great Game!</string>
    <string name="ende2">Very great Game!</string>
    <string name="title_activity_winner">Winner</string>
    <string name="Name">Dein Spielername</string>
    <string name="title_activity__gewinner">Activity_Gewinner</string>
    <string name="playAgain" />
    <string name="neue_Runde">neue Runde</string>
    <string name="game">really, really great game!</string>
    <string name="play">Spielzug Start</string>
    <string name="pile">Karten im Spielerstapel:</string>
    <string name="name">Spielername</string>
    <string name="gewonneneRunden">gewonnene Runden:</string>
    <string name="spieler">spielerName</string>
    <string name="gegner">gegnerName</string>
    <string name="rundeNummer">Runde X - nächster Spielzug: playerX</string>
    <string name="naechsterZug">nächster Spielzug: Player X</string>
    <string name="topCard">Deine oberste Spielkarte</string>
    <string name="character">caracter</string>
    <string name="btn_auswahl">auswählen</string>
    <string name="deine_auswahl">Deine Auswahl:</string>
    <string name="str_bevoelkerungsanteil">Bevölkerungsanteil</string>
    <string name="str_bildungsniveau">Bildungsniveau</string>
    <string name="str_wohlstand">Wohlstand</string>
    <string name="str_homogenitaet">Homogenität</string>
    <string name="str_akzeptanz">Akzeptanz</string>
    <string name="str_schamgefuehl">Schamgefühl</string>
    <string name="ergebnis">Ergebnis der Spielrunde</string>
    <string name="cpu_name">CPU Name</string>
    <string name="spieler_name">Spieler Name</string>
    <string name="kategorie">Kategorie</string>
    <string name="categorie">Kategorie:</string>
    <string name="neueRunde">nächste Runde</string>
    <string name="txt_gewinner">Der Gewinner der Runde ist</string>
    <string name="naechster_spieler">nächster Spielzug:</string>
    <string name="about">About</string>
    <string name="back">Back</string>
    <string name="back2">Zurück</string>
    <string name="developer">Application Developer</string>
    <string name="sophia">Sophia Reinholdt</string>
    <string name="institut">institute</string>
    <string name="institut2">Institute</string>
    <string name="hsainnos">HSA_innos</string>
    <string name="LottieFilesDesign">LottieFiles Design</string>
    <string name="Designer1">Sokol Laliçi</string>
    <string name="Designer2">Itay Alon</string>
    <string name="Designer3">Izhar Hussain</string>
    <string name="Designer4">Dave Legion</string>
    <string name="Designer5">Aravinth</string>
</resources>