<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:visibility="visible">

    <TextView
        android:id="@+id/rules"
        android:layout_width="300dp"
        android:layout_height="500dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:fontFamily="@font/finger_paint"
        android:text="@string/trump_rules"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorHint="#000000"
        android:textColorLink="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView"
        android:layout_width="113dp"
        android:layout_height="117dp"
        android:layout_marginStart="132dp"
        android:layout_marginLeft="132dp"
        android:layout_marginBottom="108dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/fire" />

    <EditText
        android:id="@+id/spieler_name"
        android:layout_width="179dp"
        android:layout_height="60dp"
        android:layout_marginTop="612dp"
        android:layout_marginEnd="164dp"
        android:layout_marginRight="164dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/finger_paint"
        android:gravity="start"
        android:hint="@string/Name"
        android:inputType="textPersonName"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_start"
        android:layout_width="123dp"
        android:layout_height="58dp"
        android:layout_marginTop="616dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:fontFamily="@font/finger_paint"
        android:text="@string/start2"
        android:textColorLink="@color/teal_700"
        app:backgroundTint="@color/design_default_color_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="@color/teal_700" />
</androidx.constraintlayout.widget.ConstraintLayout>