<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:visibility="visible">

    <TextView
        android:id="@+id/titel_ergebnis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="91dp"
        android:layout_marginLeft="91dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="91dp"
        android:layout_marginRight="91dp"
        android:fontFamily="@font/finger_paint"
        android:text="@string/ergebnis"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gewinner_runde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="91dp"
        android:layout_marginLeft="91dp"
        android:layout_marginTop="528dp"
        android:layout_marginEnd="91dp"
        android:layout_marginRight="91dp"
        android:fontFamily="@font/finger_paint"
        android:text="@string/txt_gewinner"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gewinner_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="91dp"
        android:layout_marginLeft="91dp"
        android:layout_marginTop="576dp"
        android:layout_marginEnd="91dp"
        android:layout_marginRight="91dp"
        android:fontFamily="@font/finger_paint"
        android:textColor="@color/design_default_color_error"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="NAME" />

    <TextView
        android:id="@+id/kategorie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="91dp"
        android:layout_marginLeft="91dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="91dp"
        android:layout_marginRight="91dp"
        android:fontFamily="@font/finger_paint"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Kategorie: Schamgefühl" />

    <TextView
        android:id="@+id/cpu_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="63dp"
        android:layout_marginLeft="63dp"
        android:layout_marginTop="167dp"
        android:fontFamily="@font/finger_paint"
        android:textColor="@color/design_default_color_error"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="CPU Name" />

    <TextView
        android:id="@+id/spieler_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="232dp"
        android:layout_marginLeft="232dp"
        android:layout_marginTop="167dp"
        android:fontFamily="@font/finger_paint"
        android:textColor="@color/design_default_color_error"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Spieler Name" />

    <ImageView
        android:id="@+id/character_cpu"
        android:layout_width="193dp"
        android:layout_height="271dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="200dp"
        android:contentDescription="@string/character"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/feministen" />

    <ImageView
        android:id="@+id/character_spieler"
        android:layout_width="193dp"
        android:layout_height="271dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/character"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/feministen" />

    <Button
        android:id="@+id/button_neue_runde"
        android:layout_width="178dp"
        android:layout_height="49dp"
        android:layout_marginTop="620dp"
        android:layout_marginEnd="116dp"
        android:layout_marginRight="116dp"
        android:fontFamily="@font/finger_paint"
        android:onClick="nextRoundButtonOnClick"
        android:text="@string/neueRunde"
        android:textColorLink="@color/teal_700"
        app:backgroundTint="@color/design_default_color_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="@color/teal_700" />

</androidx.constraintlayout.widget.ConstraintLayout>